[package]
name = "on-off-sequence-output"
description = "Sends a sequence of on/off states to a GPIO Pin"
version = "0.2.0"
authors = ["Volker Kempert <volker.kempert@almedso.de>"]
edition = "2018"
keywords = ["embedded-hal", "led", "morse_code"]
categories = ["embedded", "no-std",]
documentation = "https://docs.rs/on-off-sequence-output"
homepage = "https://github.com/almedso/on-off-sequence-output"
repository = "https://github.com/almedso/on-off-sequence-output"
readme = "README.md"
license = "MIT"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE.md",
]

[dependencies]
embedded-hal = { version = "0.2.5", features = ["unproven"] }

[badges]
travis-ci = { repository = "almedso/rust-on-off-sequence-output" }

[dev-dependencies]
failure = { version = "0.1.6", default-features = false, features = ["derive"] }
cortex-m = "0.6.0"
cortex-m-rt = "0.6.7"
cortex-m-semihosting = "0.3"
panic-semihosting = "0.5.1"

[dev-dependencies.stm32f4xx-hal]
default-features = false
features = ["rt", "stm32f401"]
version = "0.7.0"
